# curriculum

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sketch.md
.github/workflows/: docs.yml
building/: 01.html  02.html  03.html  index.html
building/01/: index.html
building/02/: index.html
building/03/: index.html
debug/: python_code_debugging.html
debug/python_code_debugging/: index.html
deploying/: ci_cd.html  index.html  k8s_basics.html
deploying/ci_cd/: index.html
deploying/k8s_basics/: index.html
docs/: index.md
docs/building/: 01.md  02.md  03.md  index.md
docs/debug/: python_code_debugging.md
docs/deploying/: ci_cd.md  index.md  k8s_basics.md
docs/feature-flags/: index.md
docs/http/: exercise.md  index.md
docs/misc/: 01-parsing.md  index.md  np.md  rdbms_basics.md
docs/react-basics/: index.md
exercises/part-1/01/: Makefile  README.md
exercises/part-1/01/tests/: 3.ffmpeg.flac  3.flac
exercises/part-1/02/: Makefile  README.md
exercises/part-1/03/: README.md
feature-flags/: index.html
http/: exercise.html  index.html
http/exercise/: index.html
misc/: index.html  np.html  rdbms_basics.html
misc/01-parsing/: index.html
misc/np/: index.html
misc/rdbms_basics/: index.html
react-basics/: index.html
search/: search_index.json
